Replace yt-dlp with Cobalt API to bypass bot detection

--- a/hf_deploy/Dockerfile
+++ b/hf_deploy/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.9-slim
 
-# Install ffmpeg
+# Install ffmpeg and git (required for installing yt-dlp from source)
 RUN apt-get update && \
-    apt-get install -y ffmpeg ca-certificates curl dnsutils && \
+    apt-get install -y git ffmpeg ca-certificates curl dnsutils && \
     rm -rf /var/lib/apt/lists/*
 
 # Set up a new user named "user" with user ID 1000
