--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,16 @@
-fastapi
-uvicorn
-yt-dlp
-requests
-pydantic
+# Core Framework
+fastapi>=0.104.0
+uvicorn>=0.24.0
+pydantic>=2.0.0
+
+# Video Extraction
+yt-dlp @ git+https://github.com/yt-dlp/yt-dlp.git@master
+
+# HTTP Clients
+httpx>=0.25.0
+requests>=2.31.0
+
+# Utilities
+cachetools>=5.3.0
+certifi>=2023.0.0
+dnspython>=2.4.0
